k8s/redis-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
   
   
  labels:
    app: redis-service
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      annotations:
       
       
      labels:
  
        app: redis-service
    spec:
      containers:
        - env:
            - name: ALLOW_EMPTY_PASSWORD
              value: "yes"
          image: bitnami/redis:latest
          name: redis-database
          ports:
            - containerPort: 6379
              hostPort: 6379
              protocol: TCP
      restartPolicy: Always
