k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  type: NodePort
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    app: api
