k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
   
   
  labels:
    app: front
  name: front
spec:
  ports:
    - name: 3000-tcp
      port: 3000
      targetPort: 3000
  type: NodePort
  selector:
    app: front
