k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  type: NodePort
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
