k8s/redis-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-service
  name: redis-service
spec:
  type: NodePort
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: redis-service
